fixed about tab content overflow

--- a/browser/render/modals/setting/setting.sass
+++ b/browser/render/modals/setting/setting.sass
@@ -25,6 +25,13 @@
   padding: 10px
   padding-left: 30px
   height: 100%
+  .about-tab
+    display: flex
+    flex-direction: column
+    .content
+      width: 100%
+      flex: 1
+      overflow-y: scroll
   .tab-title
     margin-bottom: 30px
   .middle-content
